--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -10,6 +10,7 @@
     grid-template-columns: 1fr 1fr 1fr;
     /* display: flex; */
     /* flex-wrap: wrap; */
+    justify-items: center;
     gap: 50px 80px;
 }
 
