--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -1,32 +1,35 @@
-.main{
-    padding: 30px 30px 50px;
-    max-width: 1024px;
-    margin: auto;
+.main {
+  padding: 30px 30px 50px;
+  max-width: 1024px;
+  margin: auto;
 }
 
-.movieContainer{
-    margin-top: 50px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    /* display: flex; */
-    /* flex-wrap: wrap; */
-    justify-items: center;
-    gap: 50px 80px;
+.main h1 {
+  margin: 50px 0 0;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 48px;
+  color: #ff9800;
 }
 
-@media only screen and (max-width: 768px){
-    .movieContainer{
-        /* padding: 20px; */
-        grid-template-columns: 1fr 1fr;
-        gap: 80px 50px;
-    }
+.movieContainer {
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: center;
+  gap: 50px 80px;
 }
 
-@media only screen and (max-width: 600px){
-    .movieContainer{
-        /* padding: 20px; */
-        grid-template-columns: auto;
-        gap: 50px;
-        /* flex-direction: column; */
-    }
+@media only screen and (max-width: 768px) {
+  .movieContainer {
+    grid-template-columns: 1fr 1fr;
+    gap: 80px 50px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .movieContainer {
+    grid-template-columns: auto;
+    gap: 50px;
+  }
 }
