--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
   font-family: "DM Sans", sans-serif;
-  background: linear-gradient(252.02deg, #192038 -0.13%, #323f61 84.46%);
+  background: linear-gradient(252.02deg, #192038 -0.13%, #323f61 84.46%) no-repeat;
+  min-height: 100vh;
 }
