--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -1,5 +1,7 @@
 .main{
-    font-size: 16px;
+    font-size: 48px;
+    margin-top: 48px;
     font-weight: 500;
     color: #ffffff;
+    text-align: center;
 }
