--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -17,15 +17,21 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   justify-items: center;
-  gap: 50px 80px;
+  gap: 50px 60px;
 }
 
-.message{
-    font-size: 48px;
-    margin-top: 48px;
-    font-weight: 500;
-    color: #ffffff;
-    text-align: center;
+.message {
+  font-size: 48px;
+  margin-top: 48px;
+  font-weight: 500;
+  color: #ffffff;
+  text-align: center;
+}
+
+@media only screen and (max-width: 1024px) {
+  .movieContainer {
+    gap: 50px 30px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -36,6 +42,9 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .main h1 {
+    text-align: center;
+  }
   .movieContainer {
     grid-template-columns: auto;
     gap: 50px;
